Fix overflowing icon and tags positioning in trending card

--- a/src/styles/abstracts/_mixins.scss
+++ b/src/styles/abstracts/_mixins.scss
@@ -87,7 +87,6 @@
 
 @mixin card-info {
   display: flex;
-  flex-direction: column;
   align-items: flex-start;
   gap: 8px;
   color: #2a3541b2;
