--- a/src/styles/components/_trending-card.scss
+++ b/src/styles/components/_trending-card.scss
@@ -2,9 +2,19 @@
 @use "../abstracts/mixins" as *;
 
 .trending-card {
+  &__img-wrapper {
+    height: 272px;
+    width: 100%;
+    overflow: hidden;
+    border-radius: 20px;
+  }
 
-  &__img {
+  &__img img {
     @include product-image;
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
   }
 
   &__icon-wrapper {
@@ -48,7 +58,7 @@
   }
 
   &__tag {
-    &:first-child::after {
+    &:last-child::before {
       @include card-pseudoelement;
     }
   }
